--- a/portfolio.html
+++ b/portfolio.html
@@ -100,9 +100,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-technokryak.jpg"
+                    srcset="
+                    ./images/portfolio/img450_1.jpg 450w,
+                    ./images/portfolio/img900_1.jpg 900w,
+                    ./images/portfolio/img354_1.jpg 354w,
+                    ./images/portfolio/img708_1.jpg 708w,
+                    ./images/portfolio/img370_1.jpg 370w,
+                    ./images/portfolio/img740_1.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_1.jpg"
                     alt="Сторінка сайту з трьома фото персоналу "
-                    width="370"
+                    
                   />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -121,9 +130,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-poster.jpg"
+                   srcset="
+                    ./images/portfolio/img450_2.jpg 450w,
+                    ./images/portfolio/img900_2.jpg 900w,
+                    ./images/portfolio/img354_2.jpg 354w,
+                    ./images/portfolio/img708_2.jpg 708w,
+                    ./images/portfolio/img370_2.jpg 370w,
+                    ./images/portfolio/img740_2.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_2.jpg"
                     alt="Фото баскетболістів у грі"
-                    width="370"
+                    
                   />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -142,10 +160,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-seafood.jpg"
+                    srcset="
+                    ./images/portfolio/img450_3.jpg 450w,
+                    ./images/portfolio/img900_3.jpg 900w,
+                    ./images/portfolio/img354_3.jpg 354w,
+                    ./images/portfolio/img708_3.jpg 708w,
+                    ./images/portfolio/img370_3.jpg 370w,
+                    ./images/portfolio/img740_3.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_3.jpg"
                     alt="Логотип ресторану Seafood"
-                    width="370"
-                  />
+                    />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -163,10 +189,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-prime.jpg"
+                    srcset="
+                    ./images/portfolio/img450_4.jpg 450w,
+                    ./images/portfolio/img900_4.jpg 900w,
+                    ./images/portfolio/img354_4.jpg 354w,
+                    ./images/portfolio/img708_4.jpg 708w,
+                    ./images/portfolio/img370_4.jpg 370w,
+                    ./images/portfolio/img740_4.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_4.jpg"
                     alt="Навушники чорні"
-                    width="370"
-                  />
+                     />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -184,10 +218,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-boxes.jpg"
+                    srcset="
+                    ./images/portfolio/img450_5.jpg 450w,
+                    ./images/portfolio/img900_5.jpg 900w,
+                    ./images/portfolio/img354_5.jpg 354w,
+                    ./images/portfolio/img708_5.jpg 708w,
+                    ./images/portfolio/img370_5.jpg 370w,
+                    ./images/portfolio/img740_5.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_5.jpg"
                     alt="Дві коробки"
-                    width="370"
-                  />
+                    />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -205,10 +247,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-inspiration.jpg"
+                   srcset="
+                    ./images/portfolio/img450_6.jpg 450w,
+                    ./images/portfolio/img900_6.jpg 900w,
+                    ./images/portfolio/img354_6.jpg 354w,
+                    ./images/portfolio/img708_6.jpg 708w,
+                    ./images/portfolio/img370_6.jpg 370w,
+                    ./images/portfolio/img740_6.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_6.jpg"
                     alt="Сторінка сайту з написами"
-                    width="370"
-                  />
+                    />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -226,9 +276,17 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-edition.jpg"
+                    srcset="
+                    ./images/portfolio/img450_7.jpg 450w,
+                    ./images/portfolio/img900_7.jpg 900w,
+                    ./images/portfolio/img354_7.jpg 354w,
+                    ./images/portfolio/img708_7.jpg 708w,
+                    ./images/portfolio/img370_7.jpg 370w,
+                    ./images/portfolio/img740_7.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_7.jpg"
                     alt="Розгорнута книжка"
-                    width="370"
                   />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
@@ -247,10 +305,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-lab.jpg"
+                   srcset="
+                    ./images/portfolio/img450_8.jpg 450w,
+                    ./images/portfolio/img900_8.jpg 900w,
+                    ./images/portfolio/img354_8.jpg 354w,
+                    ./images/portfolio/img708_8.jpg 708w,
+                    ./images/portfolio/img370_8.jpg 370w,
+                    ./images/portfolio/img740_8.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_8.jpg"
                     alt="Бірка з лого LAB"
-                    width="370"
-                  />
+                   />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
@@ -268,10 +334,18 @@
                 <div class="project__thumb">
                   <img
                     class="img project__image"
-                    src="./images/portfolio-business.jpg"
+                    srcset="
+                    ./images/portfolio/img450_9.jpg 450w,
+                    ./images/portfolio/img900_9.jpg 900w,
+                    ./images/portfolio/img354_9.jpg 354w,
+                    ./images/portfolio/img708_9.jpg 708w,
+                    ./images/portfolio/img370_9.jpg 370w,
+                    ./images/portfolio/img740_9.jpg 740w,
+                    "
+                    sizes="(min-width:1200px) 370px,(min-width:768px) 354px,(min-width:480px) 450px, 100 vw"
+                    src="./images/portfolio/img450_9.jpg"
                     alt="В ноутбуці відкрита сторінка Growing Business"
-                    width="370"
-                  />
+                   />
                   <p class="project__caption">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
